styling fixes Sort By button and body overflow solved

--- a/src/Pages/CSS/ShopCategory.css
+++ b/src/Pages/CSS/ShopCategory.css
@@ -6,7 +6,7 @@
 
 .shopcategory-indexSort {
   display: flex;
-  margin: 0px 170px;
+margin: 59px;
   justify-content: space-between;
   align-items: center;
 }
@@ -15,7 +15,7 @@
   font-family: inherit;
   text-align: center;
   padding: 10px 35px 10px 20px;
-  border-radius: 40px;
+  border-radius: 9px;
   border: 1px solid #888;
   -moz-appearance: none;
   -webkit-appearance: none;
@@ -41,6 +41,9 @@
 
 .shopcategory-sort option {
   text-align: left;
+}
+.shopcategory-sort,select {
+  margin: 5px;
 }
 
 .shopcategory-indexSort p span {
